--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --surface-50: rgba(24, 24, 24, 1);
+    --surface-100: rgba(30, 30, 30, 30);
+}
+
+body {
+    @apply bg-[var(--surface-50)] text-black dark:text-white;
+}
