--- a/src/app.postcss
+++ b/src/app.postcss
@@ -19,12 +19,8 @@ body {
     @apply rounded-[var(--rounded-base)] py-1 px-3 transition-[transform,opacity,background] hover:bg-opacity-80 active:scale-[0.97];
 }
 
-.primary {
-    @apply bg-green-300 text-black;
-}
-
-.secondary {
-    @apply bg-pink-400 text-black;
+.input {
+    @apply py-1 px-2 bg-black bg-opacity-75 text-white;
 }
 
 .h1 {
