highlight js etc

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -24,13 +24,13 @@ body {
 }
 
 .h1 {
-    @apply text-5xl;
+    @apply text-5xl leading-loose;
 }
 
 .h2 {
-    @apply text-4xl;
+    @apply text-4xl leading-loose;
 }
 
 .h3 {
-    @apply text-2xl;
+    @apply text-2xl leading-loose;
 }
